<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- APP -->
    <string name="app_name">Fairphone Updater</string>

    <!-- HEADER -->
    <string name="install_update">Install Update</string>
    <string name="other_os_options">Other OS Options</string>
    <string name="fairphone_os">Fairphone OS</string>
    <string name="android_os">Android OS</string>

    <!-- TITLES -->
    <string name="update_version">Update version</string>
    <string name="restart">Restart</string>
    <string name="important_notice">Important notice</string>
    <string name="download_started">download started</string>
    <string name="download_complete">download complete</string>
    <string name="latest_version">Latest version</string>
    <string name="older_version">Older version</string>
    <string name="older_versions">Older versions</string>
    <string name="take_me_back">Take me back</string>
    <string name="go_ahead_and_install_it">Go ahead and install it</string>
    <string name="new_os">New OS</string>

    <!-- MESSAGES -->
    <string name="os_update_has_started_message">The OS update has started. This may take some time depending on your network connection speed.</string>
    <string name="restart_your_phone_message">Restart your phone to complete the update.</string>
    <string name="important_notice_message">It\'s important that you keep in mind that installing an older OS version will make loose features.</string>
    <string name="older_version_os_install_confirmation">Are you sure you want to go forward with it despite all the implications?</string>
    <string name="older_version_os_install_confirmation_checkbox">I know and understand all implication of performing this installation</string>
    <string name="your_are_about_to_install">You are about to install</string>
    <string name="an_older_version_of_os">an older version of your current OS.</string>
    <string name="your_current_os_version">Your current OS version</string>
    <string name="your_os_is_up_to_date">Your OS is up to date</string>
    <string name="want_to_change_your_os">Want to change your OS?</string>
    <string name="update_is_available">Update is available</string>
    <string name="before_you_update">Before you update, make sure&#8230;</string>
    <string name="please_be_patient">Please be patient&#8230;</string>

    <!-- OTHER -->
    <string name="warning">Warning</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="install">Install</string>
    <string name="installed">Installed</string>
    <string name="cancel">Cancel</string>

    <!-- OLD -->
    <string name="updaterService">Updater Service</string>
    <string name="currentVersion">Current Version</string>
    <string name="newVersion">New Version</string>
    <string name="installVersion">Install new version</string>
    <string name="rebootDevice">Reboot device</string>
    <string name="messageReadyToInstall">New version ready to install&#8230;</string>
    <string name="fairphoneUpdateMessage">New Fairphone update available</string>
    <string name="downloadMessage">Downloading version, please wait&#8230;</string>
    <string name="downloadUpdateTitle">New Fairphone update</string>
    <string name="wifiDiscaimerTitle">Wi-Fi disabled</string>
    <string name="wifiDiscaimerMessage">The file you’re trying to download is too large for mobile connections (~200MB). Please enable Wi-Fi connection and try again.</string>
    <string name="releaseNotes">Release Notes:</string>
    <string name="moreInfo">More Info</string>
    <string name="lessInfo">Less Info</string>
    <string name="noUpdatesAvailable">There are no updates available</string>
    <string name="newVersionAvailable">New version available</string>
    <string name="youAreRunning">You are running</string>
    <string name="fairphoneOS">Fairphone OS</string>
    <string name="aospOS">Stock Android</string>
    <string name="fairphone">Fairphone</string>
    <string name="android">Android</string>
    <string name="downloadAndUpdateVersionBtn">Download and Update</string>
    <string name="installBtn">Install</string>
    <string name="downloading">Downloading</string>
    <string name="deviceNotSupported">Device not supported</string>
    <string name="configFileDownloadError">Error downloading config file.</string>
    <string name="configFileDownloadLinkError">Error downloading config file. Link used:</string>
    <string name="updateDownloadError">Error downloading</string>
    <string name="checkDetails">Check details and installation options</string>
    <string name="alsoAvailable">OS Library</string>
    <string name="pleaseWait">Please wait&#8230;</string>
    <string name="eraseAllPartitionsWarning">This update will erase all your data.\nDo you want to continue?</string>
    <string name="dev_mode_toast">Developer mode enabled for this session</string>
    <string name="noSpaceAvailableCache">No space available on /cache. Aborting&#8230;</string>
    <string name="noSpaceAvailableSdcard">No space available on memory. Aborting&#8230;</string>
    <string name="invalidMD5DownloadMessage">Invalid file downloaded: Wrong MD5</string>
    <string name="invalidSignatureDownloadMessage">Invalid file downloaded: Bad signature</string>
    <string name="osChangeWarning">You\'re about to change your OS.\nYou can lose some features and apps with this change.\nAre you sure you want to continue?</string>
    <string name="osChangeCheckboxWarning">Yes, I want to continue</string>
    <string name="updater_google_apps_installing_description">Google apps installation is occurring on the background. Please try again later.</string>

    <!-- GOOGLE -->
    <string name="google_apps_installer_name">Google Apps Installer</string>
    <string name="google_apps_initial_title">Install\nGoogle Apps</string>
    <string name="google_apps_disclaimer_title">Install Google Apps</string>
    <string name="google_apps_disclaimer_description">For the full Android and Google mobile experience like the Google Play store, your phone needs extra content and software. Unfortunately, as Fairphone doesn\'t have a license yet, we cannot pre-install this content, nor can we provide it directly ourselves. We are working with the content owner to achieve this.\nPress "I Agree" below to download this content from an external secured source. Installing this content is your own responsibility.\nIf you do not agree, your phone will still work with basic Android apps, of course, but you will miss some services from Google.</string>
    <string name="google_apps_disclaimer_agree">I Agree</string>
    <string name="google_apps_denied_permissions_title">Denied permissions</string>
    <string name="google_apps_denied_permissions_description">Fairphone OS could not obtain the necessary permissions to install Google Apps. If you chose DENY, please restart the installer and ALLOW permissions.</string>
    <string name="google_apps_reboot_failed_title">Failed reboot</string>
    <string name="google_apps_reboot_failed_description">Google Apps are installed. Could not reboot device, please reboot manually.</string>
    <string name="google_apps_download_title">Downloading Google Apps</string>
    <string name="google_apps_unzip_title">Extracting Google Apps</string>
    <string name="google_apps_install_title">Installing Google Apps</string>
    <string name="google_apps_reboot_title">Rebooting device</string>
    <string name="google_apps_permissions_description">Fairphone OS will now ask you for Superuser access. We assure you it\'s perfectly safe. Please choose ALLOW when asked.</string>
    <string name="google_apps_permissions_title">System permissions</string>
    <string name="google_apps_reboot_description">The system needs to reboot to complete the installation.\n\nAfter the reboot, follow the steps to set up Google Apps.</string>
    <string name="google_apps_uninstall_title">Google Apps installed</string>
    <string name="google_apps_uninstall_description">Delete this\nInstaller</string>
    <string name="google_apps_re_install_title">Google Apps installed</string>
    <string name="google_apps_re_install_description">Remove this or\nclick to re-install</string>
    <string name="google_apps_failed_download_title">Download failed</string>
    <string name="google_apps_failed_download_description">Downloaded files are corrupted. Retry?</string>
    <string name="google_apps_download_error">Error downloading files, please try again.</string>
    <string name="google_apps_connection_title">Wi-Fi disabled</string>
    <string name="google_apps_connection_description">The file you\'re trying to download is too large for mobile connections (~100MB). Please enable Wi-Fi connection and try again.</string>
    <string name="google_apps_reinstall_request_title">Remember</string>
    <string name="google_apps_reinstall_description">To reinstall the Play store on your phone, you must go to All Apps, Widgets, then drag the Google Apps Installer widget to your Home panel and select it.</string>
    <string name="google_apps_updater_installing_description">Fairphone Updater is updating your OS on the background. Please try again later.</string>

</resources>