<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#888"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="26sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/currentVersionImage"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:scaleType="centerCrop"
            android:src="@drawable/fairphone_updater_current_version" />

        <LinearLayout
            android:id="@+id/currentVersionInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#606060"
            android:orientation="vertical"
            android:paddingTop="15dp" >

            <TextView
                android:id="@+id/youAreRunningText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/youAreRunning"
                android:textColor="#fff"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/currentVersionNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textColor="#fff"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/updateAvailableText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/currentVersionReleaseDateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/releasedIn"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/moreInfoText"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginTop="15dp"
                android:background="#989898"
                android:gravity="center"
                android:text="@string/moreInfo"
                android:textColor="#fff" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/updateDownloadInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#989898"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/downloadingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/downloading"
                android:textColor="#fff"
                android:textSize="17sp" />

            <ProgressBar
                android:id="@+id/updateDownloadProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:indeterminate="false"
                android:indeterminateOnly="false"
                android:max="100"
                android:padding="0dp"
                android:progress="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/otherVersionsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone" >

        <Button
            android:id="@+id/fairphoneVersionsButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="right"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:padding="0dp"
            android:text="@string/fairphoneOS"
            android:textColor="#ffffff"
            android:textSize="26sp" />

        <Button
            android:id="@+id/aospVersionsButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="right"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:padding="0dp"
            android:text="@string/aospOS"
            android:textColor="#ffffff"
            android:textSize="26sp" />
    </LinearLayout>

    <include
        android:layout_weight="1"
        layout="@layout/version_detailed_info" />

</LinearLayout>